--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
+    "mongodb": "^6.6.0",
     "mongoose": "^8.3.2",
     "node": "^22.0.0"
   },
